<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Switch
            android:id="@+id/enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enabled" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/book_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amount_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/max_amount"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/buy_if_below_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/max_price"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/automatic_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatic"
            android:textAlignment="textEnd" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/max_time_reset_buy_value_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/time_reset_automatic"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/time_between_buys_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time_between_buys"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/use_fee_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_fee"
            android:textAlignment="textEnd" />

        <Switch
            android:id="@+id/disable_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_at_buy"
            android:textAlignment="textEnd" />

    </LinearLayout>

</ScrollView>
